Integrating view package - Implement Login Page